--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,17 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/load_button"
-        android:layout_width="151dp"
-        android:layout_height="72dp"
-        android:text="Load"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.91"
-        android:background="@drawable/rounded_button"/>
+            android:id="@+id/load_button"
+            style="@android:style/Widget.Button"
+            android:layout_width="151dp"
+            android:layout_height="72dp"
+            android:background="@android:color/holo_blue_bright"
+            android:text="Load"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.91" />
 
     <ImageView
         android:id="@+id/imageView"
