--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
 
     <ImageView
             android:id="@+id/imageView"
-            android:layout_width="411dp"
-            android:layout_height="620dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             app:layout_constraintBottom_toTopOf="@+id/load_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.506"
