--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -4,32 +4,24 @@
         <layer-list>
             <item>
                 <shape>
-
                     <solid android:color="#2575b4"/>
-
                     <corners android:radius="30dp"/>
-                    <padding
-                        android:bottom="10dp"/>
+                    <padding android:bottom="10dp"/>
                 </shape>
             </item>
             <item>
                 <shape android:shape = "rectangle">
                 <solid android:color = "#3498db"/>
                 <corners android:radius = "30dp"/>
-            </shape>
+                </shape>
             </item>
-
-
-
         </layer-list>
     </item>
     <item android:state_pressed = "true">
         <layer-list>
             <item>
                 <shape>
-
                     <solid android:color="#3498db"/>
-
                     <corners android:radius="30dp"/>
                     <padding
                         android:bottom="10dp"/>
@@ -39,10 +31,8 @@
                 <shape android:shape = "rectangle">
                 <solid android:color = "#3498db"/>
                 <corners android:radius = "30dp"/>
-
                 </shape>
             </item>
         </layer-list>
-
     </item>
 </selector>
